# reading_tracker

./: .dockerignore  .env.docker  .env.example  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/: dependabot.yml
app/: main.py
app/api/: router.py
app/core/: config.py  email.py  enums.py  exceptions.py  logging.py  redis.py  security.py
app/db/: session.py
app/features/auth/: events.py  repository.py  router.py  schemas.py  service.py
app/features/books/: events.py  repository.py  router.py  schemas.py  service.py
app/features/catalog/: events.py  repository.py  router.py  schemas.py  service.py
app/features/sessions/: events.py  repository.py  router.py  schemas.py  service.py
app/features/stats/: events.py  repository.py  router.py  schemas.py  service.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  base.py  book.py  reading_session.py  user.py  user_book.py
app/shared/: dependencies.py  events.py  models.py  schemas.py
app/tasks/: book_tasks.py  celery_app.py  celery_db.py  email_tasks.py  stats_tasks.py
docs/: ARCHITECTURE.md  README.prod.md
tests/: conftest.py
tests/integration/api/: test_auth.py  test_books.py  test_catalog.py  test_email.py
tests/unit/: test_email_tasks.py  test_events.py  test_exceptions.py  test_redis.py  test_tasks.py
tests/unit/test_auth/: test_events.py  test_repository.py  test_schemas.py  test_security.py  test_service.py
tests/unit/test_books/: test_schemas.py
(+5 files in other folders)
