[project]
name = "reading-tracker"
version = "0.1.0"
description = "REST API for tracking reading progress"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = []
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "greenlet>=3.4.0",
    "alembic>=1.13.0",
    "email-validator>=2.0.0",
    "fakeredis>=2.0.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "coverage[toml]>=7.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
pytest = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
